--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -69,11 +69,13 @@
                     <li>Priority Processing</li>
                 </ul>
             </div>
-                <form action="/signup" method="POST" style="
+                <div style="
                         display: flex;
                         flex-direction: column;">
-                <button id="checkout-and-portal-button" type="submit-" class="submit-button">Register Now</button>
-            </form>
+                <a href="/signup" style="text-decoration: none;">
+                    <button id="checkout-and-portal-button" type="button" class="submit-button">Register Now</button>
+                </a>
+            </div>
         </div>
     </div>
 </body>
