--- a/templates/faq.html
+++ b/templates/faq.html
@@ -349,14 +349,14 @@
                     <i class="fas fa-chevron-down"></i>
                 </div>
                 <div class="faq-answer">
-                    <p>ChartWitch offers a Premium plan at $299/month that includes:</p>
+                    <p>ChartWitch offers a Premium plan at $6.99/month that includes:</p>
                     <ul>
-                        <li>Unlimited API access</li>
-                        <li>All core features</li>
-                        <li>24/7 customer support</li>
-                        <li>HIPAA compliance</li>
-                        <li>Custom integrations</li>
-                        <li>Priority processing</li>
+                        <li>Secure Transaction</li>
+                        <li>Basic & Advance features</li>
+                        <li>Future Updates</li>
+                        <li>HIPAA Compliance</li>
+                        <li>Cancel Anytime</li>
+                        <li>Priority Processing</li>
                     </ul>
                     <p>We also offer custom enterprise solutions for larger healthcare organizations.</p>
                 </div>
