--- a/templates/payment.html
+++ b/templates/payment.html
@@ -75,7 +75,7 @@
                 <input type="hidden" name="lookup_key" value="">
                 <input type="hidden" name="user_id" value="2edfe4dd-e377-46d4-bccb-d087adb2873e">
                 <input type="hidden" name="email" value="">
-                <button id="checkout-and-portal-button" type="submit-" class="submit-button">Checkout</button>
+                <button id="checkout-and-portal-button" type="submit" class="submit-button">Checkout</button>
             </form>
         </div>
     </div>
